Tried something to make the comparison sections wrap on webkit/blink mobile.  It won't, I'll try to fix this later.
Notes for later:
-------------------
What I tried: - Defining Font size (This commit's changes)
	      - Setting minimum width on comp. sections (broke on FF mobile, most desktop reduced quality
What I should try: - Probably minimum width, as it would be easiest.  Try not to break FF
		   - Removing display: flex; from comp parent, at least on mobile webkit/blink.  Seemed to work, but kinda hacky

--- a/styleoss.css
+++ b/styleoss.css
@@ -58,6 +58,7 @@ body {
   background: #424F5A;
   display: flex;
   justify-content: center;
+  font-size: 2em;
   margin: 0;
   color: white;
   padding: .5em 2em;
@@ -71,4 +72,5 @@ body {
   justify-content: center;
   margin: 0;
   padding: 0 .5em;
+  font-size: 1em;
 }
